--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ chennai- 60003</p>
 
 </address>
 <h1>image</h1><figure>
- <img src="file:///home/kavin/Downloads/flower%20images.jpeg"alt="image" title="image" 
+ <img src="flower images.jpeg"alt="image" title="image" 
  align = "center" border ="4" 
  >
 <figcaption>image is good</figcaption>
