--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ chennai- 60003</p>
 </address>
 
 <h1>image</h1><figure>
- <img src="IMG_20221112_214753.jpg"alt="image" title="image" 
+ <img src="Screenshot from 2022-11-12 22-09-28.png"alt="image" title="image" 
  align = "center" border ="4" 
  >
 <figcaption>image is good</figcaption>
