--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ chennai- 60003</p>
   <p>i'm willng to pay <strike>12k</strike></p><hr>
 
 
-</address>
+</address><hr>
 
-<h1>image</h1><figure>
+<h1>kathir</h1><figure>
  <img src="Screenshot from 2022-11-12 22-09-28.png"alt="image" title="image" 
  align = "center" border ="4" 
  >
