--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body> <h1>heading</h1>
+<body bgcolor=" #a922fb "> <h1>heading</h1>
     <h1>hello world</h1>
     <h2>you</h2>
     <h3>the </h3>
